2019-03-02 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Two's complement for hexadecimal

2019-02-25 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Use old SI definitions until 2019-05-20
	* Update translations
	* Hide unit and constant suffixes in result

2019-02-22 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix exact decimals mode
	* Fixes for conversion to base units with nonlinear unit relations
	* Do not show nonlinear unit conversion warning unnecessarily
	* Fix compilation on 64-bit Windows
	* Uncertainty propagation improvements
	* Fixes for conversion to base units or optimal units involving approximate relations in exact mode
	* Improved simplification with nounit() factors
	* Fix variable reparsing when variable units are (de)activated

2019-02-17 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Replace decimal with exact decimal rational numbers when exact mode is toggled on (CLI)

2019-02-16 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Separate interval calculation / uncertainty propagation method choice (from interval arithmetic for approximate functions and irrational numbers)
	* Enable interval arithmetic by default (CLI)
	* Relative uncertainty property for variables, units and data objects
	* Fixes for complex uncertainty propagation
	* Fix uncertainty propagation using variance formula with multiple non-variable intervals (was calculated using interval arithmetic, potentially after expansion)
	* Uncertainty function (absolute or relative uncertainty)
	* Line break in variable info value (CLI)
	* Show expression in function info (CLI)

2019-02-09 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Enable show ending zeroes by default

2019-02-04 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Disable CLI text formatting on Windows

2019-01-30 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Unformat variable value (fixes units with prefixes)
	* Improve plus-minus interval display